--- a/bsconfig.json
+++ b/bsconfig.json
@@ -13,10 +13,10 @@
   },
   "refmt": 3,
   "package-specs": {
-    "module": "commonjs",
+    "module": "es6",
     "in-source": true
   },
-  "suffix": ".bs.js",
+  "suffix": ".mjs",
   "sources": [
     {
       "dir": "src",
