--- a/bsconfig.json
+++ b/bsconfig.json
@@ -16,7 +16,7 @@
     "module": "es6",
     "in-source": true
   },
-  "suffix": ".mjs",
+  "suffix": ".bs.js",
   "sources": [
     {
       "dir": "src",
